--- a/publicFiles/html/base.html
+++ b/publicFiles/html/base.html
@@ -1,1 +1,34 @@
-base.html
+
+<style>
+#console {
+    background-color: #777777;
+    color: #ffffff;
+    padding:10px;
+    border-radius: 10px;
+}
+</style>
+<input id="box" type="textbox" style="width:100px; height:100px;"></input>
+<br>
+<button id="button1">Run</button>
+<pre id="console"></pre>
+
+<script>
+document.getElementById('button1').addEventListener("click", ()=>{
+ document.getElementById('console').innerHTML=""
+const Http = new XMLHttpRequest();
+const url='';
+const target = new URL('http://localhost/v1/sshUtil/runScript');
+const params = new URLSearchParams();
+params.set('run', document.getElementById('box').value);
+target.search = params.toString();
+Http.open("GET", target);
+Http.send();
+
+Http.onreadystatechange = (e) => {
+  console.log(Http.responseText)
+  document.getElementById('console').innerHTML = JSON.parse(Http.responseText);
+}
+});
+
+
+</script>
